--- a/style.css
+++ b/style.css
@@ -45,3 +45,23 @@ button {
     border: none;
     padding: 10px;
 }
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body {
+    margin-left:60px;
+    margin-right: 60px;
+    font-family:'Poppins' , sans-serif;
+
+}
+section  { 
+    margin-top: 50px;
+}
+@media(max-width: 768px) {
+    body  {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+}
