--- a/style.css
+++ b/style.css
@@ -66,3 +66,10 @@ body {
 section {
     margin-top: 20px;
 }
+.home-bg {
+    background-image: url("home.jpg");
+    background-size: cover ;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center ;
+}
