--- a/style.css
+++ b/style.css
@@ -73,3 +73,32 @@ section {
     background-attachment: fixed;
     background-position: center ;
 }
+.fade-in {
+    animation: fadeIn 1.2s ease-in-out;
+}
+@keyframes fadeIn {
+    from { opacity: 0;}
+    to { opacity:1;}
+}
+.typing {
+    width:16ch;
+    overflow:hidden;
+    white-space:nowrap;
+    border-right:3px solid;
+    animation:typing 3s steps(16),blink.5s step-end inifinite;
+}
+@keyframes typing{
+    from{width:0;}
+}
+@keyframes blink{
+    50%{border-color:transparent;}
+}
+.profile{
+    width:180px;
+    border-radius:50%;
+    transition:0.3s;
+}
+.profile:hover {
+    transform:scale(1.1);
+
+}
