--- a/style.css
+++ b/style.css
@@ -5,17 +5,20 @@ body {
 }
 
 header {
-    background: #5A4FCF;
-    padding: 20px;
-    text-align: center;
-    color: white;
+    background: rgba(255,255,255,0.2);
+    backdrop-filter:blur(10px);
+    padding: 20px 0;
+    position: fixed;
+    width: 100%;
+    top:0;
+    text-align:center;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.2) ;
 }
 
 nav a {
-    margin: 10px;
     color: white;
-    text-decoration: none;
-    font-weight: bold;
+    padding:10px 20px;
+    font-weight: 600;
 }
 
 .hero {
