--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: Arial;
-    margin-top: 10px;
+    margin:0;
+    padding-top: 100px;
     background: #fafafa;
 }
 
@@ -11,14 +12,23 @@ header {
     position: fixed;
     width: 100%;
     top:0;
+    left:0;
+    z-index:1000;
     text-align:center;
     box-shadow: 0 4px 10px rgba(0,0,0,0.2) ;
 }
-
+nav{
+display:flex;
+justify-content:center;
+align-items:center;
+gap:30px;
+}
 nav a {
     color: white;
     padding:10px 20px;
+    font-size:18px;
     font-weight: 600;
+    text-decoration: none;
 }
 
 .hero {
