--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ align-items:center;
 gap:30px;
 }
 nav a {
-    color: white;
+    color: black;
     padding:10px 20px;
     font-size:18px;
     font-weight: 600;
