--- a/style.css
+++ b/style.css
@@ -36,9 +36,7 @@ nav a {
     padding: 100px 20px;
 }
 
-.highlight {
-    color: #FF6F61;
-}
+
 
 form {
     display: flex;
@@ -122,4 +120,13 @@ section {
     box-shadow:0 4px 10px rgba(0,0,0,0.2);
     margin:20px;
 
+}
+.container {
+    border: 3px solid black;
+    padding: 15px;
+    margin: 10px;
+    border-radius: 10px;
+    width: 100%;        
+    max-width: 500px;   
+    box-sizing: border-box;
 }
