--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ header {
     background: rgba(255,255,255,0.2);
     backdrop-filter:blur(10px);
     padding: 20px 0;
-    position: fixed;
+    position:static;
     width: 100%;
     top:0;
     left:0;
