--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ header {
     background: rgba(255,255,255,0.2);
     backdrop-filter:blur(10px);
     padding: 20px 0;
-    position:static;
+    position:fixed;
     width: 100%;
     top:0;
     left:0;
@@ -68,10 +68,9 @@ body {
 
 }
 
-@media(max-width: 768px) {
-    body  {
-        margin-left: 20px;
-        margin-right: 20px;
+@media(max-width: 600px) {
+    header  {
+        position:static;
     }
 }
 section {
